syntax = "proto3";

import "twitch.proto";

option java_multiple_files = true;
option java_package = "org.jchien.twitchbrowser";
option java_outer_classname = "TwitchBrowserProto";

package twitchbrowser;

// The greeting service definition.
service TwitchBrowserService {
    rpc getStreams(StreamsRequest) returns (StreamsResponse) {}
    rpc getPopularGames(PopularGamesRequest) returns (PopularGamesResponse) {}
}

message StreamsRequest {
    repeated string gameNames = 1;
    int32 limit = 2;
    bool forceFresh = 3;
}

message StreamsResponse {
    repeated TwitchStream streams = 1;
    bool fromCache = 2;
}

message PopularGamesRequest {
    int32 limit = 1;
}

message PopularGamesResponse {
    repeated TwitchGame games = 1;
}
